--- a/shortbio.html
+++ b/shortbio.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Caglar's Portfolio</title>
+    <title>Dan's Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Caglar Koylu's Geovisualization Portfolio</a>
+        <a class="navbar-brand" href="#">Dan Burleson's Geovisualization Portfolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,10 +38,10 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="files/koylu_cv_23.pdf">Resume</a>
+              <a class="nav-link" href="files/DB Resume.pdf">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mailto:caglar-koylu@uiowa.edu">Contact</a>
+              <a class="nav-link" href="mailto:daniel-burleson@uiowa.edu">Contact</a>
             </li>
           </ul>
         </div>
@@ -52,13 +52,13 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Caglar Koylu
+      <h1 class="my-4">Dan Burleson
         <small>Cartographer</small>
       </h1>
 
       <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
-              <img class="card-img-top" src="images/koylu_portrait.jpg" alt="">
+              <img class="card-img-top" src="files/DB Portrait.png" alt="">
          </div>
          <p class="card-text">My research focuses on developing new theories, methodologies and applications to help extract and
            understand complex patterns from large geo-social networks, i.e., networks embedded in geographic space and time such as
@@ -81,7 +81,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Caglar Koylu 2020</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Dan Burleson 2021</p>
       </div>
       <!-- /.container -->
     </footer>
