--- a/shortbio.html
+++ b/shortbio.html
@@ -60,17 +60,11 @@
           <div class="col-lg-4 col-sm-6 portfolio-item">
               <img class="card-img-top" src="files/DB Portrait.png" alt="">
          </div>
-         <p class="card-text">My research focuses on developing new theories, methodologies and applications to help extract and
-           understand complex patterns from large geo-social networks, i.e., networks embedded in geographic space and time such as
-           migration, human mobility, commodity flows and information flows. Geo-social networks are formed by flows of physical entities
-           (e.g., movements of humans, vehicles, sensors, animals), and communication (e.g., information, ideas, innovation, personal communication)
-           that connect places to places and individuals to individuals. Given the complexity introduced by highly interacting systems of geo-social networks,
-           solving a real-world problem often need to simultaneously consider the geographic, temporal and network components that form the system and relationships
-           among them. For example, disease spread is influenced by many factors such as human mobility, social ties, population dynamics,
-           transportation infrastructure and seasonal changes in weather, and the relationships among these factors.
-           Human migration is driven by not only the availability of jobs or average temperature at a destination place but also the
-           availability of family and friendship ties. During an emergency, knowing how information diffuses among geographic locations
-           and through a network of social actors is crucial for managing situational awareness and assisting emergency management. </p>
+         <p class="card-text">My research outside of geographic visualization lies within Business Analytics. I'm currently completing my Master's degree, with a graduation date set for this May 2021.
+        I enjoy diving into statistics and data within a business to solve real problems. To be able to solve business problems using historical data to guide decisions is a passion of mine.
+           Last summer I worked at a tech startup in Des Moines which works within the IoT space. I was a Data Analyst intern in which I built an ERP application from scratch. Following graduation 
+           I'll be returning to Des Moines to begin working full-time at Ernst & Young as a Technology Risk Consultant.
+        </p>
       </div>
       <!-- /.row -->
 
