--- a/shortbio.html
+++ b/shortbio.html
@@ -53,7 +53,7 @@
 
       <!-- Page Heading -->
       <h1 class="my-4">Dan Burleson
-        <small>Cartographer</small>
+        <small>Business Analyst</small>
       </h1>
 
       <div class="row">
