--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -53,7 +53,7 @@
 	<div class="container">
 		<div class="content">
 			<div class="row">
-					<h1>Populations and County Area Coverages in Iowa TETSTETSTESTEST</h1>
+					<h1>Populations and County Area Coverages in Iowa</h1>
 			</div>
 			<hr />
 			<div class="row">
