--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -39,7 +39,7 @@
 							<li><a href="../shortbio.html">About</a></li>
 							<li><a href="../files/DB Resume.pdf">Resume</a></li>
 							<li class="divider"></li>
-							<li><a href="daniel-burleson@uiowa.edu">Contact</a></li>
+							<li><a href="mailto: daniel-burleson@uiowa.edu">Contact</a></li>
 						</ul>
 					</li>
 				</ul>
