--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -149,11 +149,11 @@
 	// simply enter 1 for each value in multiplyBy.
   var attributesToBeNormalized = [att2, att3, attr4];
 	var multiplyBy = [1, 1, 1];
-	var divideBy = ['census_2010_county_DP1_DP0010001', 'census_2010_county_DP1_DP0010001', 'census_2010_county_DP1_ALAND10'];
+	//var divideBy = ['census_2010_county_DP1_DP0010001', 'census_2010_county_DP1_DP0010001', 'census_2010_county_DP1_ALAND10'];
 	//['census_2010_county_DP1_ALAND10' + 'census_2010_county_DP1_AWATER10']
 	// if your variables are not raw counts and they are already normalized, comment out above, and
 	//uncomment below:
-	// var attributesToBeNormalized = [];
+	var attributesToBeNormalized = [1,1,1];
 	// var multiplyBy = [];
 	// var divideBy = [];
 
