--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -131,7 +131,7 @@
 	var idAttribute = 'GEOID10', nameAttribute = 'census_2010_county_DP1_NAMELSAD10';
 
 	// Find the abbreviations of color names from https://colorbrewer2.org/
-	var colors =  colorbrewer.BuGn;
+	var colors =  colorbrewer.YlGn;
 
 	// Chart/map attributes (variables) and formats based on the divs defined above
 	// For attribute 1 (the same for all others), see the description of the parameters below.
