--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -154,9 +154,9 @@
 	//['census_2010_county_DP1_ALAND10' + 'census_2010_county_DP1_AWATER10']
 	// if your variables are not raw counts and they are already normalized, comment out above, and
 	//uncomment below:
-	var attributesToBeNormalized = [1,1,1];
+	// var attributesToBeNormalized = [];
 	// var multiplyBy = [];
-	// var divideBy = [];
+	var divideBy = [1,1,1];
 
 	//DO NOT CHANGE ANYTHING BELOW THIS POINT UNLESS YOU KNOW WHAT YOU ARE DOING
 	////////////////////////////////////////////////////////////////////////////////////////////////
