--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -118,8 +118,8 @@
 	// TODO: Change the variables below to customize the small multiples interface for your data
 	var polygonJSONFile = 'data/iowa_shape_geo.json'
 	// change the projection if needed *d3.geoAlbers()*
-	//var projection = d3.geoAlbers();
-	var projection = d3.geoMercator();
+	var projection = d3.geoAlbers();
+	//var projection = d3.geoMercator();
 	var widthheightRatio = 0.4;
 	// Relative placement of legend that ranges between 0 and 1.
 	// 0 is the start, whereas 1 i the end of each panel.
@@ -141,7 +141,7 @@
 	// Check this link on how to specify the desired format:
 	// https://observablehq.com/@d3/d3-format
 	var att1 = 'census_2010_county_DP1_DP0010001', att1alias = 'Population by County', att1format = '.0f',
-	att2 = 'census_2010_county_DP1_ALAND10', att2alias =  'Land Area by Capita by County', att2format = '.0f',
+	att2 = 'census_2010_county_DP1_ALAND10', att2alias =  'Land Area per Capita by County', att2format = '.0f',
 	att3 = 'census_2010_county_DP1_AWATER10', att3alias = 'Water Area per Capita by County', att3format = '.0f',
 	att4 = 'census_2010_county_DP1_ALAND10', att4alias = '% of County Area Covered by Land', att4format = '.0f';
 
