--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -37,9 +37,9 @@
 					<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="../shortbio.html">About</a></li>
-							<li><a href="../files/DB Resume.pdf">Resume</a></li>
+							<li><a href="../files/koylu_cv_23.pdf">Resume</a></li>
 							<li class="divider"></li>
-							<li><a href="mailto: daniel-burleson@uiowa.edu">Contact</a></li>
+							<li><a href="caglar-koylu@uiowa.edu">Contact</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -53,12 +53,12 @@
 	<div class="container">
 		<div class="content">
 			<div class="row">
-					<h1>Populations and County Area Coverages in Iowa</h1>
+					<h1>SNAP Benefits in Manhattan</h1>
 			</div>
 			<hr />
 			<div class="row">
 				<div class="col-sm-4">
-					<p>Data from <a href="data.iowa.gov">Data.Iowa.gov</a>, maps by Dan Burleson.</p>
+					<p>Data from <a href="data.iowa.gov">Data.Iowa.gov</a>, maps by Ryan Larson & Caglar Koylu.</p>
 				</div>
 				<div class='col-sm-8 mapButtons'>
 					<span class="pull-right">
@@ -82,12 +82,12 @@
 			<br />
 			<div class="row">
 				<div class="col-sm-6">
-					<span><p><h3 class='mapTitle'>Population</h3>Population by County</p></span>
+					<span><p><h3 class='mapTitle'>SNAP Benefits</h3>% households that receive Supplemental Nutrition Assistance Program (SNAP).</p></span>
 					<div id="divMap1"></div>
 					<div id="divHist1"></div>
 				</div>
 				<div class="col-sm-6">
-					<h3 class='mapTitle'>Land Area per Capita</h3><p>Land area coverage per capita by Iowa county</p>
+					<h3 class='mapTitle'>Kids</h3><p>% kids between 0 and 17 years old.</p>
 					<div id="divMap2"></div>
 					<div id="divHist2"></div>
 				</div>
@@ -95,12 +95,12 @@
 
 			<div class="row">
 				<div class="col-sm-6">
-					<h3 class='mapTitle'>Water Area per Capita</h3><p>Water area coverage per capita by Iowa county</p>
+					<h3 class='mapTitle'>Senior Citizens</h3><p>% senior citizens 65+ years old.</p>
 					<div id="divMap3"></div>
 					<div id="divHist3"></div>
 				</div>
 				<div class="col-sm-6">
-					<h3 class='mapTitle'>Land Coverage Proportion</h3><p>Percentage of total area of county covered in land</p>
+					<h3 class='mapTitle'>Poverty Rate</h3><p>% population with income at or below the Federal poverty thresholds.</p>
 					<div id="divMap4"></div>
 					<div id="divHist4"></div>
 				</div>
@@ -116,11 +116,10 @@
 
 	/////////////////////////////////////////////////////////////////////////////////////////////////
 	// TODO: Change the variables below to customize the small multiples interface for your data
-	var polygonJSONFile = 'data/iowa_shape_geo.geojson'
+	var polygonJSONFile = 'data/iowa_shape.geojson'
 	// change the projection if needed *d3.geoAlbers()*
-	//var projection = d3.geoAlbers();
-	var projection = d3.geoMercator();
-	var widthheightRatio = 0.4;
+	var projection = d3.geoTransverseMercator();
+	var widthheightRatio = 0.8;
 	// Relative placement of legend that ranges between 0 and 1.
 	// 0 is the start, whereas 1 i the end of each panel.
 	// If you want to put the legend on the left, then use 0.
@@ -128,10 +127,10 @@
 	var legendX = 0.84, legendY = 0.5
 
 	// id attribute and the name attribute to be used in the tooltip
-	var idAttribute = 'GEOID10', nameAttribute = 'census_2010_county_DP1_NAMELSAD10';
+	var idAttribute = 'GEOID10', nameAttribute = 'GEOID';
 
 	// Find the abbreviations of color names from https://colorbrewer2.org/
-	var colors =  colorbrewer.YlGn;
+	var colors =  colorbrewer.YlGnBu;
 
 	// Chart/map attributes (variables) and formats based on the divs defined above
 	// For attribute 1 (the same for all others), see the description of the parameters below.
@@ -140,18 +139,17 @@
 	// att1format: enter the d3.format string to display the variables in the format you like
 	// Check this link on how to specify the desired format:
 	// https://observablehq.com/@d3/d3-format
-	var att1 = 'census_2010_county_DP1_DP0010001', att1alias = 'Population by County', att1format = '.0f',
-	att2 = 'census_2010_county_DP1_ALAND10', att2alias =  'Land Area per Capita by County', att2format = '.0f',
-	att3 = 'census_2010_county_DP1_AWATER10', att3alias = 'Water Area per Capita by County', att3format = '.0f',
-	att4 = 'census_2010_county_DP1_ALAND10', att4alias = '% of County Area Covered by Land', att4format = '.0f';
+	var att1 = 'census_2010_county_DP1_DP0010001', att1alias = '% SNAP Benefits', att1format = '.0f',
+	att2 = 'census_2010_county_DP1_ALAND10', att2alias =  '% Kids 0-17', att2format = '.0f',
+	att3 = 'census_2010_county_DP1_AWATER10', att3alias = '% Seniors 65+', att3format = '.0f',
+	att4 = 'census_2010_county_DP1_ALAND10', att4alias = 'Poverty Rate', att4format = '.0f';
 
   // enter below all variables that should be normalized. If you would like to multiple the variables
 	// with a constant value enter them in multiplyBy array. If there is no need for multiplication,
 	// simply enter 1 for each value in multiplyBy.
   var attributesToBeNormalized = [att2, att3, att4];
-	var multiplyBy = [1, 1, 1];
-	var divideBy = ['census_2010_county_DP1_DP0010001', 'census_2010_county_DP1_DP0010001', ['census_2010_county_DP1_ALAND10' + 'census_2010_county_DP1_AWATER10']];
-
+	var multiplyBy = [100, 100, 100];
+	var divideBy = [1,1,1];
 	// if your variables are not raw counts and they are already normalized, comment out above, and
 	//uncomment below:
 	// var attributesToBeNormalized = [];
@@ -176,7 +174,7 @@
 	var margin = {top: 10, right: 20, bottom: 10, left:20},
 	width = chartWidth - margin.right - margin.left,
 	height = chartHeight - margin.top - margin.bottom,
-	histHeight = (chartHeight * .25);
+	histHeight = (chartWidth * .1);
 
 	// Save scales as global scale variables
 	//TODO: fix the classifications
@@ -239,7 +237,7 @@
 			var polygons = data;
 			var proj = d3.geoPath().pointRadius(2);
 			// TODO: change the projection details here below - including specific parameters such as rotation, extent, etc.
-			proj.projection(projection.fitSize([width, height], polygons));
+			proj.projection(projection.rotate([76 + 35 / 60, - 40]).fitSize([width, height], polygons));
 
 			////////////////////////////////////////////////////
 			// Normalize based multiplyby and divideby values
@@ -346,6 +344,7 @@
 						var map = panel.selectAll('.path')
 						.data(polygons.features)
 						.enter().append('g');
+
 						map.append('path')
 						.attr("class", function(e) { return classPolygon(e, d.map); })
 						.on('mouseover', function(e) { return mouseOver2(e, dependent); })
@@ -364,13 +363,12 @@
 						panel.select('.legendQuant').call(holdLegend.scale(current_scale));
 
 						// add north arrow
-						// panel
-						// .append('path')
-						// .attr('id', 'arrow')
-						// .attr("d", "M 6 0 12 12 6 9 0 12")
-						// .attr('fill', "black")
-						// .attr("transform", "translate(" + margin.left + "," + margin.top + ") rotate("+ 0 +")");
-
+            panel
+						.append('path')
+						.attr('id', 'arrow')
+						.attr("d", "M 6 0 12 12 6 9 0 12")
+						.attr('fill', "black")
+						.attr("transform", "translate(" + margin.left + "," + margin.top + ") rotate("+ 0 +")");
 					}); // end for each
 				});
 
