--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -116,7 +116,7 @@
 
 	/////////////////////////////////////////////////////////////////////////////////////////////////
 	// TODO: Change the variables below to customize the small multiples interface for your data
-	var polygonJSONFile = 'data/iowa_shape_geo.geojson'
+	var polygonJSONFile = 'data/us_states_geo.geojson'
 	// change the projection if needed *d3.geoAlbers()*
 	var projection = d3.geoTransverseMercator();
 	var widthheightRatio = 0.8;
@@ -127,7 +127,7 @@
 	var legendX = 0.84, legendY = 0.5
 
 	// id attribute and the name attribute to be used in the tooltip
-	var idAttribute = 'GEOID10', nameAttribute = 'GEOID';
+	var idAttribute = 'AFFGEOID', nameAttribute = 'NAME';
 
 	// Find the abbreviations of color names from https://colorbrewer2.org/
 	var colors =  colorbrewer.YlGnBu;
@@ -139,10 +139,10 @@
 	// att1format: enter the d3.format string to display the variables in the format you like
 	// Check this link on how to specify the desired format:
 	// https://observablehq.com/@d3/d3-format
-	var att1 = 'census_2010_county_DP1_DP0010001', att1alias = '% SNAP Benefits', att1format = '.0f',
-	att2 = 'census_2010_county_DP1_ALAND10', att2alias =  '% Kids 0-17', att2format = '.0f',
-	att3 = 'census_2010_county_DP1_AWATER10', att3alias = '% Seniors 65+', att3format = '.0f',
-	att4 = 'census_2010_county_DP1_ALAND10', att4alias = 'Poverty Rate', att4format = '.0f';
+	var att1 = 'ALAND', att1alias = '% SNAP Benefits', att1format = '.0f',
+	att2 = 'AWATER', att2alias =  '% Kids 0-17', att2format = '.0f',
+	att3 = 'ALAND', att3alias = '% Seniors 65+', att3format = '.0f',
+	att4 = 'AWATER', att4alias = 'Poverty Rate', att4format = '.0f';
 
   // enter below all variables that should be normalized. If you would like to multiple the variables
 	// with a constant value enter them in multiplyBy array. If there is no need for multiplication,
