--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -139,7 +139,7 @@
 	// att1format: enter the d3.format string to display the variables in the format you like
 	// Check this link on how to specify the desired format:
 	// https://observablehq.com/@d3/d3-format
-	var att1 = 'ALAND', att1alias = 'Area Land', att1format = '.0f',
+	var att1 = 'attributes_Population', att1alias = 'Population', att1format = '.0f',
 	att2 = 'AWATER', att2alias =  'Area Water', att2format = '.0f',
 	att3 = 'attributes_Population', att3alias = 'Area Land', att3format = '.0f',
 	att4 = 'AWATER', att4alias = 'Area Water', att4format = '.0f';
