--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -139,22 +139,22 @@
 	// att1format: enter the d3.format string to display the variables in the format you like
 	// Check this link on how to specify the desired format:
 	// https://observablehq.com/@d3/d3-format
-		var att1 = 'attributes_Population', att1alias = 'Population', att1format = '.0f',
-	att2 = 'attributes_MedianValueOwnerOccupiedUnits', att2alias =  'Area Water', att2format = '.0f',
-	att3 = 'attributes_MedianRentPaymentRenterOccupied', att3alias = 'Area Land', att3format = '.0f',
-	att4 = 'attributes_MedianRentPaymentRenterOccupied', att4alias = 'Area Water', att4format = '.0f';
+		var att1 = 'att1', att1alias = 'Population', att1format = '.0f',
+	att2 = 'att2', att2alias =  'Area Water', att2format = '.0f',
+	att3 = 'att3', att3alias = 'Area Land', att3format = '.0f',
+	att4 = 'att4', att4alias = 'Area Water', att4format = '.0f';
 
   // enter below all variables that should be normalized. If you would like to multiple the variables
 	// with a constant value enter them in multiplyBy array. If there is no need for multiplication,
 	// simply enter 1 for each value in multiplyBy.
-  	var attributesToBeNormalized = [att1, att2, att3, att4];
-	var multiplyBy = [1, 1, 1, 1];
-	var divideBy = ['attributes_TotalHousingUnits','max(attributes_MedianValueOwnerOccupiedUnits)','max(attributes_MedianRentPaymentRenterOccupied)','attributes_MedianRoomsWithinHousingUnits'];
+  	//var attributesToBeNormalized = [att1, att2, att3, att4];
+	//var multiplyBy = [1, 1, 1, 1];
+	//var divideBy = [1,1,1,1];
 	// if your variables are not raw counts and they are already normalized, comment out above, and
 	//uncomment below:
-	 //var attributesToBeNormalized = [];
-	 //var multiplyBy = [];
-	 //var divideBy = [];
+	 var attributesToBeNormalized = [];
+	 var multiplyBy = [];
+	 var divideBy = [];
 
 	//DO NOT CHANGE ANYTHING BELOW THIS POINT UNLESS YOU KNOW WHAT YOU ARE DOING
 	////////////////////////////////////////////////////////////////////////////////////////////////
