--- a/smallmultipleChoropleths/index.html
+++ b/smallmultipleChoropleths/index.html
@@ -139,10 +139,10 @@
 	// att1format: enter the d3.format string to display the variables in the format you like
 	// Check this link on how to specify the desired format:
 	// https://observablehq.com/@d3/d3-format
-		var att1 = 'att1', att1alias = 'People per Housing Unit', att1format = '.0f',
-	att2 = 'att2', att2alias =  'Home Value Percentile', att2format = '.0f',
-	att3 = 'att3', att3alias = 'Rent Payment Percentile', att3format = '.0f',
-	att4 = 'att4', att4alias = 'Rent per Room', att4format = '.0f';
+		var att1 = 'attributes_att1', att1alias = 'People per Housing Unit', att1format = '.0f',
+	att2 = 'attributes_att2', att2alias =  'Home Value Percentile', att2format = '.0f',
+	att3 = 'attributes_att3', att3alias = 'Rent Payment Percentile', att3format = '.0f',
+	att4 = 'attributes_att4', att4alias = 'Rent per Room', att4format = '.0f';
 
   // enter below all variables that should be normalized. If you would like to multiple the variables
 	// with a constant value enter them in multiplyBy array. If there is no need for multiplication,
