--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="https://observablehq.com/@dburleson98/choropleth-mapping-geog-3540"><img class="card-img-top" src="files/choropleth.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Choropleth Mapping</a>
+                <a href="https://observablehq.com/@dburleson98/choropleth-mapping-geog-3540">Choropleth Mapping</a>
               </h4>
               <p class="card-text">Land Area per Capita in Iowa Counties, Source: [Census 2010]</p>
             </div>
@@ -73,7 +73,7 @@
             <a href="https://observablehq.com/@dburleson98/proportional-symbol-mapping"><img class="card-img-top" src="files/proportionalSymbols.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Symbol Mapping</a>
+                <a href="https://observablehq.com/@dburleson98/proportional-symbol-mapping">Symbol Mapping</a>
               </h4>
               <p class="card-text">Median Household Income by State</p>
             </div>
@@ -84,7 +84,7 @@
             <a href="https://observablehq.com/@dburleson98/bivariate-choropleth-mapping"><img class="card-img-top" src="files/chart.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Bivariate Mapping</a>
+                <a href="https://observablehq.com/@dburleson98/bivariate-choropleth-mapping">Bivariate Mapping</a>
               </h4>
               <p class="card-text">Average Land Area per Capita combined with Average Water Area per Capita by Iowa County; Soure: Census 2010</p>
             </div>
@@ -92,34 +92,23 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="https://geog3540.github.io/daburleson/smallmultipleChoropleths/"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Project Four</a>
+                <a href="https://geog3540.github.io/daburleson/smallmultipleChoropleths/">Linked Small Multiples Choropleths</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <p class="card-text">Linked visualizations using various classification methods to illustrate housing variables in US States; Source: [Census 2019]</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="https://observablehq.com/d/7e4e039013ffca23"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Project Five</a>
+                <a href="https://observablehq.com/d/7e4e039013ffca23">Final Project</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Six</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+              <p class="card-text">Analysis on the impact of Derecho on Iowa Counties</p>
             </div>
           </div>
         </div>
