--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
       <!-- /.row -->
 
-      <!-- Pagination -->
+      <!-- Pagination
       <ul class="pagination justify-content-center">
         <li class="page-item">
           <a class="page-link" href="#" aria-label="Previous">
@@ -138,7 +138,8 @@
             <span class="sr-only">Next</span>
           </a>
         </li>
-      </ul>
+      </ul> 
+      -->
 
     </div>
     <!-- /.container -->
