--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="https://geog3540.github.io/daburleson/smallmultipleChoropleths/"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="https://geog3540.github.io/daburleson/smallmultipleChoropleths/"><img class="card-img-top" src="files/Screenshot 2021-04-29 114407.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="https://geog3540.github.io/daburleson/smallmultipleChoropleths/">Linked Small Multiples Choropleths</a>
